--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/devVal_profile.jpeg" alt="">
+            <img src="images/flower.JPG" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -87,7 +87,7 @@
                 </p>
             </div>
             
-            <img src="images/flower.JPG" alt="Flower on the ground" class="about-me__img">
+            <img src="images/Coco-760.JPG" alt="Flower on the ground" class="about-me__img">
          </section>
 
                  <!-- My Work -->
@@ -126,16 +126,36 @@
         </section>
 
                 <!-- Footer -->
-                <footer>
+                <footer class="footer">
                     <!-- replace with your own email address -->
                     <a href="mailto:hello@jane.dev" class="footer__link">vainferro@gmail.com</a>
                     <ul class="social-list">
-                        <li class="social-list__item"><a class="social-list__link" href="https://codepen.io">a</a></li>
-                        <li class="social-list__item"><a class="social-list__link" href="http://dribbble.com">b</a></li>
-                        <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">c</a></li>
-                        <li class="social-list__item"><a class="social-list__link" href="https://github.com">d</a></li>
+                        <li class="social-list__item">
+                            <a class="social-list__link" href="https://codepen.io">
+                                <i class="fab fa-codepen"></i>
+                            </a>
+                        </li>
+                        <li class="social-list__item">
+                            <a class="social-list__link" href="http://dribbble.com">
+                                <i class="fab fa-dribbble"></i>
+                            </a>
+                        </li>
+                        <li class="social-list__item">
+                            <a class="social-list__link" href="https://twitter.com">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="social-list__item">
+                            <a class="social-list__link" href="https://https://github.com/2Tough">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                    </ul>
+  
+
+
                     </ul>
                 </footer>
-    
+                <script src="index.js"></script>
 </body>
 </html>
